--- a/configs/base_debug.yaml
+++ b/configs/base_debug.yaml
@@ -1,7 +1,7 @@
-wandb:
-    project: Lets_Loop2
-    notes:
-    log_every_steps: 100
+#wandb:
+#    project: Lets_Loop2
+#    notes:
+#    log_every_steps: 100
 
 gpu:
     cuda: True
@@ -19,13 +19,13 @@ training:
     task_name: linear_regression
     learning_rate: 0.0001
     weight_decay: 0.0
-    train_steps: 200000
+    train_steps: 100000
     save_every_steps: 1000
     keep_every_steps: 100000
     curriculum:
         dims:
             start: 5
-            end: 10
+            end: 20
             inc: 1
             interval: 5000
         points:
