--- a/configs/base_debug.yaml
+++ b/configs/base_debug.yaml
@@ -1,6 +1,6 @@
 wandb:
     project: Lets_Loop2
-    notes:
+    notes: constant_dims_10
     log_every_steps: 100
 
 gpu:
@@ -25,8 +25,8 @@ training:
     curriculum:
         dims:
             start: 10
-            end: 4
-            inc: -1
+            end: 10
+            inc: 0
             interval: 5000
         points:
             start: 41
