--- a/configs/experiment_3_n_dims_10_points_21_heads_4__loop_30_layers2__vs__loop_1_layers12/base_loop.yaml
+++ b/configs/experiment_3_n_dims_10_points_21_heads_4__loop_30_layers2__vs__loop_1_layers12/base_loop.yaml
@@ -1,16 +1,16 @@
 wandb:
     project: Lets_Loop2
-    notes: exp_1__n_dims_8_points_41__loop_30_layers2__vs__loop_1_layers12
+    notes: exp_1__n_dims_8_points_41__loop_5_layers2__vs__loop_1_layers12
     log_every_steps: 100
 
 gpu:
     cuda: True
 
 model:
-    family: gpt2
+    family: gpt2_loop
     n_embd: 256
-    n_layer: 12
-    n_head: 8
+    n_layer: 2
+    n_head: 4
     n_dims: 10
     n_positions: 101
 
@@ -24,21 +24,21 @@ training:
     keep_every_steps: 100000
     curriculum:
         dims:
-            start: 8
-            end: 8
+            start: 10
+            end: 10
             inc: 0
             interval: 10000
         points:
-            start: 41
-            end: 41
+            start: 21
+            end: 21
             inc: 0
             interval: 10000
         loops:
-            start: 1
-            end: 1
-            inc: 2
+            start: 30
+            end: 30
+            inc: 0
             interval: 500
     n_loop_window: 20
 
-out_dir: ./results2/linear_regression_baseline
+out_dir: ./results2/linear_regression_loop
 debug_mode: False
