--- a/configs/experiment_5_n_dims_10_points_31_heads_4__loop_N_layers1/base_loop_b_5.yaml
+++ b/configs/experiment_5_n_dims_10_points_31_heads_4__loop_N_layers1/base_loop_b_5.yaml
@@ -1,6 +1,6 @@
 wandb:
     project: Lets_Loop2
-    notes: exp_1__n_dims_8_points_41__loop_5_layers2__vs__loop_1_layers12
+    notes: looped tf 1 layer b = 5
     log_every_steps: 100
 
 gpu:
@@ -19,9 +19,9 @@ training:
     task_name: linear_regression
     learning_rate: 0.0001
     weight_decay: 0.0
-    train_steps: 10000
+    train_steps: 20000
     save_every_steps: 1000
-    keep_every_steps: 10000
+    keep_every_steps: 100000
     curriculum:
         dims:
             start: 10
@@ -29,13 +29,13 @@ training:
             inc: 0
             interval: 10000
         points:
-            start: 21
-            end: 21
+            start: 31
+            end: 31
             inc: 0
             interval: 10000
         loops:
-            start: 1
-            end: 1
+            start: 5
+            end: 5
             inc: 0
             interval: 500
     n_loop_window: 20
