--- a/configs/experiment_7_n_dims_10_points_31_heads_4__last_10_tokens/base_loop_b_5.yaml
+++ b/configs/experiment_7_n_dims_10_points_31_heads_4__last_10_tokens/base_loop_b_5.yaml
@@ -15,6 +15,7 @@ model:
     n_positions: 101
 
 training:
+    seed: None
     batch_size: 64
     task_name: linear_regression
     learning_rate: 0.0001
