--- a/configs/experiment_7_n_dims_10_points_31_heads_4__last_10_tokens/base_loop_b_5_10_tokens.yaml
+++ b/configs/experiment_7_n_dims_10_points_31_heads_4__last_10_tokens/base_loop_b_5_10_tokens.yaml
@@ -16,7 +16,7 @@ model:
     last_n_tokens: 10
 
 training:
-    seed: null
+    seed: 42
     batch_size: 64
     task_name: linear_regression
     learning_rate: 0.0001
