--- a/configs/experiment_8_n_dims_10_points_31_heads_4__n_layers/base_loop_b_10_L_4.yaml
+++ b/configs/experiment_8_n_dims_10_points_31_heads_4__n_layers/base_loop_b_10_L_4.yaml
@@ -1,22 +1,24 @@
 wandb:
     project: Lets_Loop2
-    notes: looped tf 1 layer b = 5 take first 10 tokens
+    notes: looped tf 1 layer b = 10 L = 4
     log_every_steps: 100
 
 gpu:
     cuda: True
+    n_gpu: 0
 
 model:
-    family: gpt2_firstNtokens
+    family: gpt2_lastNtokens
     n_embd: 256
-    n_layer: 1
+    n_layer: 4
     n_head: 4
     n_dims: 10
     n_positions: 101
-    first_n_tokens: 10
+    last_n_tokens: null
+
 
 training:
-    seed: 42
+    seed: null
     batch_size: 64
     task_name: linear_regression
     learning_rate: 0.0001
@@ -36,8 +38,8 @@ training:
             inc: 0
             interval: 10000
         loops:
-            start: 5
-            end: 5
+            start: 10
+            end: 10
             inc: 0
             interval: 500
     n_loop_window: 20
