--- a/configs/experiment_8_n_dims_10_points_31_heads_4__n_layers/base_loop_b_5_t_10_L_2.yaml
+++ b/configs/experiment_8_n_dims_10_points_31_heads_4__n_layers/base_loop_b_5_t_10_L_2.yaml
@@ -7,7 +7,7 @@ gpu:
     cuda: True
     n_gpu: 0
 model:
-    family: gpt2_lastNtokens
+    family: gpt2_loop
     n_embd: 256
     n_layer: 2
     n_head: 4
