--- a/configs/experiment_9_n_dims_10_points_31_ssm/base_L1.yaml
+++ b/configs/experiment_9_n_dims_10_points_31_ssm/base_L1.yaml
@@ -8,11 +8,11 @@ gpu:
     cuda: True
     n_gpu: 0
 model:
-    family: ssm_gpt2
+    family: gpt2
     n_embd: 256
     n_layer: 1
-    d_state: 32
     n_dims: 10
+    n_head: 4
     n_positions: 101
     last_n_tokens: null
 
@@ -20,7 +20,7 @@ training:
     seed: null
     batch_size: 64
     task_name: linear_regression
-    learning_rate: 0.0001 #0.008
+    learning_rate: 0.0001
     weight_decay: 0.0
     train_steps: 15000
     save_every_steps: 1000
